# libelperiodic

./: .gitignore  .travis.yml  COPYING  MANIFEST.in  Makefile  Makefile.am  Makefile.in  README.md  Symbol.map  Versions.def  aclocal.m4  configure  configure.ac  elperiodic.h  findskew.sh  periodic.c  prdic_math.c  prdic_math.h  setup.py  testskew.c
.github/workflows/: main.yml  python-publish.yml  python-wheels.yml
python/: ElPeriodic.py
scripts/: build.conf.sub  do-install.sh  do-test-pwheels.sh  do-test.sh
src/: Makefile.am  Makefile.in  Symbol.map  Versions.def  elperiodic.h  findskew.sh  periodic.c  prdic_band.h  prdic_fd.c  prdic_fd.h  prdic_inst.h  prdic_main.c  prdic_main.h  prdic_main_fd.c  prdic_main_fd.h  prdic_main_pfd.c  prdic_main_pfd.h  prdic_math.c  prdic_math.h  prdic_pfd.c  prdic_pfd.h  prdic_recfilter.c  prdic_recfilter.h  prdic_sign.c  prdic_sign_ctx.h  prdic_sign_impl.h  prdic_timespecops.h  testskew.c
